--- a/edgechain-app/src/main/resources/application.properties
+++ b/edgechain-app/src/main/resources/application.properties
@@ -1,3 +1,21 @@
+# Redis Configuration
+spring.data.redis.host=${SPRING_DATA_REDIS_HOST}
+spring.data.redis.port=${SPRING_DATA_REDIS_PORT}
+spring.data.redis.username=${SPRING_DATA_REDIS_USERNAME:default}
+spring.data.redis.password=${SPRING_DATA_REDIS_PASSWORD}
+spring.data.redis.connect-timeout=${SPRING_DATA_REDIS_CONNECT_TIMEOUT:120000}
+spring.redis.ttl=${SPRING_REDIS_TTL:3600}
+
+# JSONNET Configuration
+jsonnet.target.location=${JSONNET_TARGET_LOCATION}
+
+# OpenAI Configuration
+openai.api.key=${OPENAI_API_KEY}
+
+# Doc2Vec Configuration
+doc2vec.filepath=${DOC2VEC_FILEPATH}
+
+
 spring.main.allow-bean-definition-overriding=true
 
 spring.mvc.async.request-timeout=1200000
